--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html lang=fr dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="refresh" content="5; URL=http://www.manouvelleadresse.com">
 		<title>Mon premier site web</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
