--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="refresh" content="5; URL=http://www.manouvelleadresse.com">
 		<title>Oscar Lê</title>
 		<link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
 		<style media="screen">
